# Rohini_RTOS-RP2040

./: .gitignore  CMakeLists.txt  LICENCE  README.md  pico_sdk_import.cmake  post_init.cmake
drivers/gpio/: CMakeLists.txt  README.md  gpio.h
drivers/i2c_driver/: CMakeLists.txt  i2c_driver.h
drivers/sleep/: README.md
drivers/spi_driver/: spi_driver_cmsis.txt
lib/: CMakeLists.txt
lib/drivers/: CMakeLists.txt
lib/extras/: CMakeLists.txt
os/: CMakeLists.txt
os/boot_loader/: CMakeLists.txt  boot_loader.c
os/drivers/: CMakeLists.txt
os/drivers/gpio/: CMakeLists.txt  gpio.c  gpio.h
os/drivers/i2c_driver/: i2c_driver.c  i2c_driver.h
os/drivers/serial_uart/: CMakeLists.txt  serial_uart.c  serial_uart.h
os/drivers/sleep/: sleep.h
os/drivers/spi_driver/: CMakeLists.txt  spi_driver.c  spi_driver.h
os/kernel/: CMakeLists.txt  README.md  kernel.h
os/ros_cmsis_compat/: CmakeLists.txt
os/scheduler/: CMakeLists.txt  README.md
os/svc_handler/: CMakeLists.txt  svc_handler.c  svc_handler.h  svc_handler.s
os/terminal/: CMakeLists.txt  terminal.c  terminal.h
os/terminal_core/: CMakeLists.txt
os/terminal_core/drivers/spi_driver/: CMakeLists.txt  spi_driver.h
os/terminal_core/ros_cmsis_compat/: ros_cmsis_compat.h
os/terminal_core/terminal/: CMakeLists.txt
scheduler/: scheduler.c
src/: main.cpp
svc_handler/: CMakeLists.txt  svc_handler.h
terminal/: README.md
terminal_core/: CMakeLists.txt  README.md  terminal_core.c  terminal_core.h
terminal_core/drivers/: CMakeLists.txt
terminal_core/drivers/gpio/: gpio.c
terminal_core/drivers/i2c_driver/: i2c_driver.c
terminal_core/drivers/serial_uart/: serial_uart.h
terminal_core/drivers/sleep/: CMakeLists.txt
terminal_core/kernel/: kernel.cpp
terminal_core/ros_cmsis_compat/: CMakeLists.txt
terminal_core/scheduler/: scheduler.h
